# sgi-introduction-course

./: .envrc  .flake8  pyproject.toml
002_NumPy/exercise/: add_then_multiply.py  det2x2.py  shuffle_by_1.py  top_left_corner.py
003_a_triangle_mesh/exercise/: simple_cube.py
004_reading_and_writing_a_mesh/exercise/: write_tetrahedron.py
005_plotting_a_function/exercise/: plot_z_coord.py
